crates/nidus/tests/ui/guard_missing_type.rs
use nidus::prelude::*;

#[controller("/users")]
struct UsersController;

#[routes]
impl UsersController {
    #[get("/:id")]
    #[guard]
    async fn find_one(&self) {}
}

fn main() {}
